# blog_analyzer

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .ruff.toml  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  IMPROVEMENTS.md  Makefile  PORTFOLIO.mdx  README.md  XmlTags.md  analyzer_gui.py  api.py  blog-analyzer.mdx  blog_seo_prompt.txt  cli.py  config.py  daily_keyword_mapping_100_each_20260226.txt  daily_keyword_일상샤반사_100_20260226.txt  daily_keyword_일상톡톡_100_20260226.txt  docker-compose.yml  export_to_sheet.py  fly.toml  hanryeo_keywords.txt  hanryeo_titles_25.txt  keyword_group_mapping_20260226.txt  main.py  mongodb_service.py  mypy.ini  prompt.md  pyproject.toml  requirements-server.txt  requirements.txt  run.sh  test.json  (+8 more)
.coordination/: README.md  claude-to-codex.md  codex-to-claude.md  manuscript.md  manuscript_eye.md  manuscript_sipjeon.md  manuscript_sipjeon_v2.md  manuscript_sipjeon_v3.md  manuscript_sipjeon_v4.md
_constants/: Model.py  categories.py  text_processing.py
_data/: 2.txt
_prompts/: AGENTS.md  get_claude_prompts.py  get_gemini_prompt.py  get_gpt_prompt.py  get_kkk_prompts.py  get_my_ko_prompt.py  get_system_prompt.py  xml.py
_rule/: __init__.py  persona_example.json  sen_rule.json  story_rule.json  word_rule.json
ai_lib/: line_break_service.py  parse_food_review.py
analyzer/: config.py  expression.py  library.py  manuscript_generator.py  morpheme.py  parameter.py  request_grok_ver.py  request_문장해체분석기.py  sentence.py  subtitle.py  template.py
api/: gpt_service.py
claude/: claude_service.py  data_collector.py  demo.py  generate_blog.py  test_mongo_connection.py  test_simple.py
constants/: Model.py
data/: 1.txt  2.txt  3.txt  4.txt  5.txt  스마일라식_다음날1.txt  스마일라식_다음날2.txt  스마일라식_다음날3.txt  스마일라식_병원1.txt  스마일라식_인기글1.txt
llm/: 111  111.txt  AGENTS.md  _claude_file_uploader.py  _gang_service.py  _gpt_file_uploader.py  _song_service.py  alibaba_service.py  blog_filler_diet_v2_service.py  blog_filler_pet_service.py  blog_filler_pet_v2_service.py  blog_filler_restaurant_service.py  blog_filler_service.py  cafe_total_service.py  chatgpt4o_service.py  chunk_service.py  claude_file_uploader.py  claude_service.py  clean_claude_service.py  clean_deepseek_service.py  clean_service.py  comment_service.py  deep_search_service.py  deepseek_new_service.py  deepseek_service.py  developer.txt  gemini_3_flash_clean_service.py  gemini_3_flash_service.py  gemini_3_pro_service.py  gemini_cafe_daily_service.py  gemini_cafe_service.py  gemini_ceo_service.py  gemini_image_service.py  gemini_new_service.py  (+47 more)
(+988 files in other folders)
